updated reebill-localdev-template, added a localdev apache configuration for apache 2.4 as per 63488286

--- a/conf/reebill-localdev-template.cfg
+++ b/conf/reebill-localdev-template.cfg
@@ -4,13 +4,13 @@
 [runtime]
 integrate_skyline_backend = true
 integrate_nexus = true
-mock_skyliner = true
+mock_skyliner = false
 sessions_key = kljhasdlasldaslkdjasd
 
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
-olap_host = tyrell-dev
-olap_database = dev
+olap_host = localhost
+olap_database = olap_dev
 nexus_web_host = nexus-localdev
 nexus_db_host = localhost
 
@@ -25,13 +25,13 @@ log_file_name = reebill.log
 [usersdb]
 host = localhost
 port = 27017
-database = skyline
+database = skyline-dev
 
 [statedb]
 host = localhost
-password = reebill-dev
+password = dev
 database = skyline_dev
-user = reebill-dev
+user = dev
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
@@ -47,22 +47,20 @@ show_reebill_images = true
 
 [reebillrendering]
 temp_directory = /tmp/reebill_rendering_files
-default_backgrounds = EmeraldCity-FullBleed-1v3.png EmeraldCity-FullBleed-2v3.png
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
-teva_backgrounds = TevaPoweredBySkyline-1v1.png TevaPoweredBySkyline-2v1.png
 teva_accounts = 
 template_directory = /[home]/[workspace]/billing/reebill_templates
 default_template = skyline
 
 [rsdb]
-database = skyline
+database = skyline-dev
 host = localhost
 rspath = /db-dev/skyline/ratestructure/
 port = 27017
 
 [billdb]
 billpath = /db-dev/skyline/bills/
-database = skyline
+database = skyline-dev
 utilitybillpath = /db-dev/skyline/utilitybills/
 utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
 host = localhost
@@ -70,16 +68,16 @@ port = 27017
 
 [journaldb]
 host = localhost
-database = skyline
+database = skyline-dev
 port = 27017
 
 [authentication]
 authenticate = false
 
 [reebillreconciliation]
-log_directory = /tmp/
-report_directory = /tmp/
+log_directory = /home/dstiles/workspace/skyline/billing
+report_directory = /home/dstiles/workspace/skyline/billing
 
 [reebillestimatedrevenue]
-log_directory = /tmp/
-report_directory = /tmp/
+log_directory = /home/dstiles/workspace/skyline/billing
+report_directory = /home/dstiles/workspace/skyline/billing
