63557220 proper font path

--- a/conf/reebill-stage-template.cfg
+++ b/conf/reebill-stage-template.cfg
@@ -58,7 +58,7 @@ show_reebill_images = true
 
 [reebillrendering]
 temp_directory = /tmp/reebill_rendering_files-stage
-template_directory = /var/local/reebill-stage/lib/python2.7/site-packages/billing/reebill_templates
+template_directory = /var/local/reebill-stage/billing/reebill_templates
 default_template = skyline
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 10046 10047 10048
