--- a/conf/reebill-prod-template.cfg
+++ b/conf/reebill-prod-template.cfg
@@ -62,7 +62,7 @@ show_reebill_images = true
 
 [reebillrendering]
 temp_directory = /tmp/reebill_rendering_files-prod
-template_directory = /var/local/reebill-prod/lib/python2.7/site-packages/billing/reebill_templates
+template_directory = /var/local/reebill-prod/billing/reebill_templates
 default_template = skyline
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 10046 10047 10048
