56881382 config file tweaks

--- a/conf/reebill-prod-template.cfg
+++ b/conf/reebill-prod-template.cfg
@@ -6,7 +6,7 @@ sessions_key = fjsa83b21gaaks8
 
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
-olap_host = ip-10-114-194-210.ec2.internal
+olap_host = 10.0.1.25
 olap_database = olap_prod
 # public DNS name of nexus host is required due to nexus virtual hosting
 nexus_web_host = nexus.skylineinnovations.net
