--- a/conf/reebill-localdev-template.cfg
+++ b/conf/reebill-localdev-template.cfg
@@ -49,7 +49,7 @@ show_reebill_images = true
 temp_directory = /tmp/reebill_rendering_files
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 
-template_directory = /[home]/[workspace]/billing/reebill_templates
+template_directory = /[home]/[user]/[workspace]/billing/reebill_templates
 default_template = skyline
 
 [rsdb]
@@ -75,9 +75,9 @@ port = 27017
 authenticate = false
 
 [reebillreconciliation]
-log_directory = /home/dstiles/workspace/skyline/billing
-report_directory = /home/dstiles/workspace/skyline/billing
+log_directory = /[home]/[user]/workspace/skyline/billing
+report_directory = /[home]/[user]/workspace/skyline/billing
 
 [reebillestimatedrevenue]
-log_directory = /home/dstiles/workspace/skyline/billing
-report_directory = /home/dstiles/workspace/skyline/billing
+log_directory = /[home]/[user]/workspace/skyline/billing
+report_directory = /[home]/[user]/workspace/skyline/billing
