66022414 pointing to nexus-prod

--- a/conf/reebill-stage-template.cfg
+++ b/conf/reebill-stage-template.cfg
@@ -8,7 +8,7 @@ sessions_key = ;lkjhsae;jewqr;lknwe
 oltp_url = http://duino-drop.appspot.com/
 olap_host = 10.0.1.25
 olap_database = olap_stage
-nexus_web_host = nexus-stage.skylineinnovations.net
+nexus_web_host = nexus.skylineinnovations.net
 nexus_db_host = localhost
 
 [http]
