slices go into Dropbox public folder for turk access

--- a/processing/dla_templates/billImage.properties
+++ b/processing/dla_templates/billImage.properties
@@ -5,7 +5,7 @@
 title: Data identification from image
 description: Extract the specified data from a presented image
 keywords: image, transcription, extract, picture
-reward:0.04
+reward:0.02
 assignments:1
 annotation:sample#command
 
@@ -20,4 +20,4 @@ assignmentduration:3600
 hitlifetime:259200
 
 # this Auto Approval period is 60*60*24*15 = 15 days
-autoapprovaldelay:1296000
+autoapprovaldelay:259200
