--- a/processing/dla_templates/billImage.properties
+++ b/processing/dla_templates/billImage.properties
@@ -19,5 +19,5 @@ assignmentduration:3600
 # this HIT Lifetime value is 60*60*24*3 = 3 days
 hitlifetime:259200
 
-# this Auto Approval period is 60*60*24*15 = 15 days
-autoapprovaldelay:259200
+# this Auto Approval period is 60*60*24 = 1 days
+autoapprovaldelay:86400
