--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
 CherryPy==3.2.4
 Jinja2==2.6
 MySQL-python==1.2.3
-PIL==1.1.7
+Pillow==2.1.0
 PyYAML==3.10
 SQLAlchemy==0.7.8
 argparse==1.2.1
 certifi==0.0.8
 chardet==1.1
 ecdsa==0.10
-fabulous==0.1.5
-grapefruit==0.1a3
 greenlet==0.4.0
 mongoengine==0.8.4
 numpy==1.6.2
 ordereddict==1.1
 paramiko==1.12.0
 py-bcrypt==0.4
-pyPdf==1.13
 pycrypto==2.6.1
 pymongo==2.5.2
 python-dateutil==2.1
