--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ numpy==1.6.2
 ordereddict==1.1
 paramiko==1.12.0
 py-bcrypt==0.4
-pyPdf==1.13
+pyPdf==1.13            # requires --allow-external with pip 1.4.1
 pycrypto==2.6.1
 pymongo==2.5.2
 python-dateutil==2.1
