--- a/alembic.ini
+++ b/alembic.ini
@@ -5,7 +5,8 @@
 
 [alembic]
 # path to migration scripts
-script_location = billing/data/model/alembic
+#script_location = billing/data/model/alembic
+script_location = data/model/alembic
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
