updated config files

--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -12,7 +12,7 @@ bill_image_directory = /tmp/test/billimages
 show_reebill_images = true
 
 [statedb]
-uri = mysql://root:jMgCfgxk@localhost:3306/skyline_dev
+uri = mysql://root:root@localhost:3306/test
 echo = false
 
 [billdb]
