--- a/alembic.ini
+++ b/alembic.ini
@@ -24,7 +24,7 @@ script_location = data/model/alembic
 # versions/ directory
 # sourceless = false
 
-sqlalchemy.url = mysql://root:jMgCfgxk@localhost:3306/skyline_dev
+sqlalchemy.url = mysql://root:root@localhost:3306/skyline_dev
 
 
 # Logging configuration
