72214802 marked issued bills as processed

--- a/settings.cfg
+++ b/settings.cfg
@@ -26,18 +26,18 @@ socket_host = 127.0.0.1
 [rsdb]
 host = localhost
 port = 27017
-database = skyline
+database = skyline-dev
 
 [alembic]
 script_location = data/model/alembic
 
 [billdb]
 utilitybillpath = [root]db/skyline/utilitybills/
-billpath = [root]db/skyline/bills/
+billpath = /db-dev/skyline/bills/
 host = localhost
 port = 27017
 database = skyline-dev
-utility_bill_trash_directory = [root]db/skyline/utilitybills-deleted
+utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
 
 [statedb]
 uri = mysql://root:root@localhost:3306/skyline_dev
@@ -51,10 +51,10 @@ port = 27017
 [mailer]
 smtp_host = smtp.gmail.com
 smtp_port = 587
-originator = jwatson@skylineinnovations.com
-mail_from = "Jules Watson" <jwatson@skylineinnovations.com>
+originator = energy_billing@skylineinnovations.com
+mail_from = "Skyline Innovations" <energy_billing@skylineinnovations.com>
 bcc_list = 
-password = password
+password = hMwQ4Dbr
 
 [authentication]
 authenticate = false
