--- a/conf/reebill-dev-template.cfg
+++ b/conf/reebill-dev-template.cfg
@@ -26,7 +26,7 @@ database = reebill_dev
 
 [statedb]
 host = localhost
-password = KdvDzFZeawPy
+password = reebill-dev
 database = skyline_dev
 user = reebill-dev
 
