initial ideas around brokerage

--- a/settings.cfg
+++ b/settings.cfg
@@ -41,6 +41,7 @@ utility_bill_trash_directory = [root]db/skyline/utilitybills-deleted
 
 [statedb]
 uri = mysql://root:root@localhost:3306/skyline_dev
+#uri = sqlite:///brokerage_test.db
 echo = false
 
 [usersdb]
