66538040 shared dev cfg file updated

--- a/conf/reebill-dev-template.cfg
+++ b/conf/reebill-dev-template.cfg
@@ -22,7 +22,7 @@ log_file_name = reebill-dev.log
 [usersdb]
 host = localhost
 port = 27017
-database = reebill_dev
+database = skyline_dev
 
 [statedb]
 host = localhost
@@ -39,14 +39,14 @@ smtp_host = smtp.gmail.com
 password = hMwQ4Dbr
 
 [rsdb]
-database = reebill_dev 
+database = skyline_dev 
 host = localhost
 rspath = /db-dev/skyline/ratestructure/
 port = 27017
 
 [billdb]
 billpath = /db-dev/skyline/bills/
-database = reebill_dev
+database = skyline_dev
 utilitybillpath = /db-dev/skyline/utilitybills/
 utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
 host = localhost
@@ -65,7 +65,7 @@ teva_accounts = 10046 10047 10048
 
 [journaldb]
 host = localhost
-database = skyline-dev
+database = skyline_dev
 port = 27017
 
 [authentication]
