69569032 code restructuring, making more tabs work

--- a/reebill/settings.cfg
+++ b/reebill/settings.cfg
@@ -26,12 +26,12 @@ port = 27017
 database = skyline
 
 [billdb]
-utilitybillpath = [root]db/skyline/utilitybills/
-billpath = [root]db/skyline/bills/
+utilitybillpath = /db-dev/skyline/utilitybills/
+billpath = /db-dev/skyline/bills/
 host = localhost
 port = 27017
 database = skyline-dev
-utility_bill_trash_directory = [root]db/skyline/utilitybills-deleted
+utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
 
 [statedb]
 uri = mysql://root:root@localhost:3306/skyline_dev
