--- a/settings.cfg
+++ b/settings.cfg
@@ -40,8 +40,8 @@ database = skyline-dev
 utility_bill_trash_directory = [root]db/skyline/utilitybills-deleted
 
 [statedb]
-uri = mysql://root:root@localhost:3306/skyline_dev
-#uri = sqlite:///brokerage_test.db
+#uri = mysql://root:root@localhost:3306/skyline_dev
+uri = sqlite:///brokerage_test.db
 echo = false
 
 [usersdb]
