added settings.cfg to .hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -2,7 +2,7 @@ glob:*.pyc
 glob:*.swp
 glob:*.log
 reebill/reebill.cfg
-reebill/settings.cfg
+settings.cfg
 reebill/reebill.log
 reebill/reconciliation.log
 reebill/reconciliation_report.json
