--- a/conf/reebill-dev-template.cfg
+++ b/conf/reebill-dev-template.cfg
@@ -24,11 +24,12 @@ host = localhost
 port = 27017
 database = skyline_dev
 
+[alembic]
+script_location = /var/local/reebill-dev/billing/data/model/alembic
+
 [statedb]
-host = localhost
-password = reebill-dev
-database = skyline_dev
-user = reebill-dev
+uri = mysql://reebill-dev:reebill-dev@localhost:3306/skyline_dev
+echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
@@ -78,3 +79,50 @@ report_directory = /var/local/reebill-dev
 [reebillestimatedrevenue]
 log_directory = /var/local/reebill-dev
 report_directory = /var/local/reebill-dev
+
+
+
+[loggers]
+keys=root,reebill,sqlalchemy
+
+[handlers]
+keys=consoleHandler,fileHandler,reebillHandler
+
+[formatters]
+keys=simpleFormatter
+
+[logger_root]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+
+[logger_sqlalchemy]
+level=ERROR
+handlers=consoleHandler
+qualname=sqlalchemy
+
+[logger_reebill]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=reebill
+propagate=0
+
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
+formatter=simpleFormatter
+args=(sys.stdout,)
+
+[handler_reebillHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('reebill.log','a',100000000,20)
+
+[handler_fileHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('billing.log','a',100000000,20)
+
+[formatter_simpleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
