--- a/conf/reebill-localdev-template.cfg
+++ b/conf/reebill-localdev-template.cfg
@@ -27,11 +27,13 @@ host = localhost
 port = 27017
 database = skyline-dev
 
+[alembic]
+script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
+
 [statedb]
-host = localhost
-password = dev
-database = skyline_dev
-user = dev
+uri = mysql://dev:dev@localhost:3306/skyline_dev
+echo = false
+
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
@@ -81,3 +83,53 @@ report_directory = /[home]/[user]/workspace/skyline/billing
 [reebillestimatedrevenue]
 log_directory = /[home]/[user]/workspace/skyline/billing
 report_directory = /[home]/[user]/workspace/skyline/billing
+
+
+
+
+
+
+[loggers]
+keys=root,reebill,sqlalchemy
+
+[handlers]
+keys=consoleHandler,fileHandler,reebillHandler
+
+[formatters]
+keys=simpleFormatter
+
+[logger_root]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+
+[logger_sqlalchemy]
+level=ERROR
+handlers=consoleHandler
+qualname=sqlalchemy
+
+[logger_reebill]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=reebill
+propagate=0
+
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
+formatter=simpleFormatter
+args=(sys.stdout,)
+
+[handler_reebillHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('reebill.log','a',100000000,20)
+
+[handler_fileHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('billing.log','a',100000000,20)
+
+[formatter_simpleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
