--- a/conf/reebill-prod-template.cfg
+++ b/conf/reebill-prod-template.cfg
@@ -29,10 +29,8 @@ port = 27017
 database = skyline-prod
 
 [statedb]
-host = localhost
-password = NWH7H4wY 
-database = skyline_prod
-user = reebill-prod
+uri = mysql://reebill-prod:NWH7H4wY@localhost:3306/skyline_prod
+echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
@@ -60,6 +58,9 @@ port = 27017
 bill_image_directory = /tmp/billimages-prod
 show_reebill_images = true
 
+[alembic]
+script_location = /var/local/reebill-prod/billing/data/model/alembic
+
 [reebillrendering]
 temp_directory = /tmp/reebill_rendering_files-prod
 template_directory = /var/local/reebill-prod/billing/reebill_templates
@@ -82,3 +83,50 @@ report_directory = /var/local/reebill-prod/
 [reebillestimatedrevenue]
 log_directory = /var/local/reebill-prod/
 report_directory = /var/local/reebill-prod/
+
+
+
+[loggers]
+keys=root,reebill,sqlalchemy
+
+[handlers]
+keys=consoleHandler,fileHandler,reebillHandler
+
+[formatters]
+keys=simpleFormatter
+
+[logger_root]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+
+[logger_sqlalchemy]
+level=ERROR
+handlers=consoleHandler
+qualname=sqlalchemy
+
+[logger_reebill]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=reebill
+propagate=0
+
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
+formatter=simpleFormatter
+args=(sys.stdout,)
+
+[handler_reebillHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('reebill.log','a',100000000,20)
+
+[handler_fileHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('billing.log','a',100000000,20)
+
+[formatter_simpleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
