--- a/conf/reebill-stage-template.cfg
+++ b/conf/reebill-stage-template.cfg
@@ -25,10 +25,11 @@ port = 27017
 database = skyline-stage
 
 [statedb]
-host = localhost
-password = KdvDzFZeawPy
-database = skyline_stage
-user = reebill-stage
+uri = mysql://reebill-stage:KdvDzFZeawPy@localhost:3306/skyline_stage
+echo = false
+
+[alembic]
+script_location = /var/local/reebill-stage/billing/data/model/alembic
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
@@ -78,3 +79,52 @@ report_directory = /var/local/reebill-stage
 [reebillestimatedrevenue]
 log_directory = /var/local/reebill-stage
 report_directory = /var/local/reebill-stage
+
+
+
+
+
+[loggers]
+keys=root,reebill,sqlalchemy
+
+[handlers]
+keys=consoleHandler,fileHandler,reebillHandler
+
+[formatters]
+keys=simpleFormatter
+
+[logger_root]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+
+[logger_sqlalchemy]
+level=ERROR
+handlers=consoleHandler
+qualname=sqlalchemy
+
+[logger_reebill]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=reebill
+propagate=0
+
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
+formatter=simpleFormatter
+args=(sys.stdout,)
+
+[handler_reebillHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('reebill.log','a',100000000,20)
+
+[handler_fileHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('billing.log','a',100000000,20)
+
+[formatter_simpleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
