updating config templates

--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -8,7 +8,7 @@ sessions_key = ;lkjhsae;jewqr;lknwe
 oltp_url = http://duino-drop.appspot.com/
 olap_host = 10.0.1.25
 olap_database = olap_stage
-nexus_web_host = nexus.skylineinnovations.net
+nexus_web_host = nexus-stage.skylineinnovations.net
 nexus_db_host = localhost
 
 [http]
@@ -17,70 +17,67 @@ socket_host = 127.0.0.1
 
 [log]
 log_format = %(asctime)s %(levelname)s %(message)s
-log_file_name = reebill-stage.log
+log_file_name = reebill-dev.log
 
 [usersdb]
 host = localhost
 port = 27017
-database = skyline-stage
-
-[statedb]
-uri = mysql://reebill-stage:KdvDzFZeawPy@localhost:3306/skyline_stage
-echo = false
+database = skyline_dev
 
 [alembic]
-script_location = /var/local/reebill-stage/billing/data/model/alembic
+script_location = /var/local/reebill-dev/billing/data/model/alembic
+
+[statedb]
+uri = mysql://reebill-dev:reebill-dev@localhost:3306/skyline_dev
+echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-from = "Skyline Innovations Billing (Stage)" <energy_billing@skylineinnovations.com>
+mail_from = "Skyline Innovations Billing (Dev)" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
 password = hMwQ4Dbr
 
 [rsdb]
-database = skyline-stage
+database = skyline_dev 
 host = localhost
-rspath = /db-stage/skyline/ratestructure/
 port = 27017
 
 [billdb]
-billpath = /db-stage/skyline/bills/
-database = skyline-stage
-utilitybillpath = /db-stage/skyline/utilitybills/
-utility_bill_trash_directory = /db-stage/skyline/utilitybills-deleted
+billpath = /db-dev/skyline/bills/
+database = skyline_dev
+utilitybillpath = /db-dev/skyline/utilitybills/
+utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
 host = localhost
 port = 27017
 
 [billimages]
-bill_image_directory = /tmp/billimages-stage
+bill_image_directory = /tmp/billimages-dev
 show_reebill_images = true
 
 [reebillrendering]
-temp_directory = /tmp/reebill_rendering_files-stage
-template_directory = /var/local/reebill-stage/billing/reebill_templates
+temp_directory = /tmp/reebill_rendering_files-dev
+template_directory = /var/local/reebill-dev/billing/reebill_templates
 default_template = skyline
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 10046 10047 10048
 
 [journaldb]
 host = localhost
-database = skyline-stage
+database = skyline_dev
 port = 27017
 
 [authentication]
 authenticate = true
 
 [reebillreconciliation]
-log_directory = /var/local/reebill-stage
-report_directory = /var/local/reebill-stage
+log_directory = /var/local/reebill-dev
+report_directory = /var/local/reebill-dev
 
 [reebillestimatedrevenue]
-log_directory = /var/local/reebill-stage
-report_directory = /var/local/reebill-stage
-
-
+log_directory = /var/local/reebill-dev
+report_directory = /var/local/reebill-dev
 
 
 
