--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -1,88 +1,90 @@
+# this is an example of a dev version of the ReeBill config file. copy
+# it to reebill.cfg, which is the file actually read by bill_tool_bridge.
+
 [runtime]
 integrate_skyline_backend = true
 integrate_nexus = true
 mock_skyliner = false
-sessions_key = fjsa83b21gaaks8
+sessions_key = kljhasdlasldaslkdjasd
 
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
-olap_host = 10.0.1.25
-olap_database = olap_prod
-# public DNS name of nexus host is required due to nexus virtual hosting
-nexus_web_host = nexus.skylineinnovations.net
-# private DNS name of nexus host
-#nexus_web_host = domU-12-31-39-0E-81-12.compute-1.internal
+olap_host = localhost
+olap_database = olap_dev
+nexus_web_host = nexus-localdev
 nexus_db_host = localhost
 
-
 [http]
-socket_port = 8185
+socket_port = 8181
 socket_host = 127.0.0.1
 
 [log]
 log_format = %(asctime)s %(levelname)s %(message)s
-log_file_name = reebill-prod.log
+log_file_name = reebill.log
 
 [usersdb]
 host = localhost
 port = 27017
-database = skyline-prod
+database = skyline-dev
+
+[alembic]
+script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
 
 [statedb]
-uri = mysql://reebill-prod:NWH7H4wY@localhost:3306/skyline_prod
+uri = mysql://dev:dev@localhost:3306/skyline_dev
 echo = false
+
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-from = "Skyline Innovations" <energy_billing@skylineinnovations.com>
+mail_from = "Skyline Billing (Dev)" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = hMwQ4Dbr
+password = gkjtiNnpv85HhWjKue8w
+
+[billimages]
+bill_image_directory = /tmp/billimages
+show_reebill_images = true
+
+[reebillrendering]
+temp_directory = /tmp/reebill_rendering_files
+# TODO 37383531 Hardcoded partner name, awaiting partner grouping
+teva_accounts = 
+template_directory = /[home]/[user]/[workspace]/billing/reebill_templates
+default_template = skyline
 
 [rsdb]
-database = skyline-prod
+database = skyline-dev
 host = localhost
-rspath = /db-prod/skyline/ratestructure/
 port = 27017
 
 [billdb]
-billpath = /db-prod/skyline/bills/
-database = skyline-prod
-utilitybillpath = /db-prod/skyline/utilitybills/
-utility_bill_trash_directory = /db-prod/skyline/utilitybills-deleted
+billpath = /db-dev/skyline/bills/
+database = skyline-dev
+utilitybillpath = /db-dev/skyline/utilitybills/
+utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
 host = localhost
 port = 27017
-
-[billimages]
-bill_image_directory = /tmp/billimages-prod
-show_reebill_images = true
-
-[alembic]
-script_location = /var/local/reebill-prod/billing/data/model/alembic
-
-[reebillrendering]
-temp_directory = /tmp/reebill_rendering_files-prod
-template_directory = /var/local/reebill-prod/billing/reebill_templates
-default_template = skyline
-# TODO 37383531 Hardcoded partner name, awaiting partner grouping
-teva_accounts = 10046 10047 10048
 
 [journaldb]
 host = localhost
-database = skyline-prod
+database = skyline-dev
 port = 27017
 
 [authentication]
-authenticate = true
+authenticate = false
 
 [reebillreconciliation]
-log_directory = /var/local/reebill-prod/
-report_directory = /var/local/reebill-prod/
+log_directory = /[home]/[user]/workspace/skyline/billing
+report_directory = /[home]/[user]/workspace/skyline/billing
 
 [reebillestimatedrevenue]
-log_directory = /var/local/reebill-prod/
-report_directory = /var/local/reebill-prod/
+log_directory = /[home]/[user]/workspace/skyline/billing
+report_directory = /[home]/[user]/workspace/skyline/billing
+
+
+
 
 
 
