--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -2,83 +2,86 @@
 integrate_skyline_backend = true
 integrate_nexus = true
 mock_skyliner = false
-sessions_key = ;lkjhsae;jewqr;lknwe
+sessions_key = fjsa83b21gaaks8
 
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
 olap_host = 10.0.1.25
-olap_database = olap_stage
-nexus_web_host = nexus-stage.skylineinnovations.net
+olap_database = olap_prod
+# public DNS name of nexus host is required due to nexus virtual hosting
+nexus_web_host = nexus.skylineinnovations.net
+# private DNS name of nexus host
+#nexus_web_host = domU-12-31-39-0E-81-12.compute-1.internal
 nexus_db_host = localhost
 
+
 [http]
-socket_port = 8181
+socket_port = 8185
 socket_host = 127.0.0.1
 
 [log]
 log_format = %(asctime)s %(levelname)s %(message)s
-log_file_name = reebill-dev.log
+log_file_name = reebill-prod.log
 
 [usersdb]
 host = localhost
 port = 27017
-database = skyline_dev
-
-[alembic]
-script_location = /var/local/reebill-dev/billing/data/model/alembic
+database = skyline-prod
 
 [statedb]
-uri = mysql://reebill-dev:reebill-dev@localhost:3306/skyline_dev
+uri = mysql://reebill-prod:NWH7H4wY@localhost:3306/skyline_prod
 echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-from = "Skyline Innovations Billing (Dev)" <energy_billing@skylineinnovations.com>
+mail_from = "Skyline Innovations" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
 password = hMwQ4Dbr
 
 [rsdb]
-database = skyline_dev 
+database = skyline-prod
 host = localhost
-rspath = /db-dev/skyline/ratestructure/
 port = 27017
 
 [billdb]
-billpath = /db-dev/skyline/bills/
-database = skyline_dev
-utilitybillpath = /db-dev/skyline/utilitybills/
-utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
+billpath = /db-prod/skyline/bills/
+database = skyline-prod
+utilitybillpath = /db-prod/skyline/utilitybills/
+utility_bill_trash_directory = /db-prod/skyline/utilitybills-deleted
 host = localhost
 port = 27017
 
 [billimages]
-bill_image_directory = /tmp/billimages-dev
+bill_image_directory = /tmp/billimages-prod
 show_reebill_images = true
 
+[alembic]
+script_location = /var/local/reebill-prod/billing/data/model/alembic
+
 [reebillrendering]
-temp_directory = /tmp/reebill_rendering_files-dev
-template_directory = /var/local/reebill-dev/billing/reebill_templates
+temp_directory = /tmp/reebill_rendering_files-prod
+template_directory = /var/local/reebill-prod/billing/reebill_templates
 default_template = skyline
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 10046 10047 10048
 
 [journaldb]
 host = localhost
-database = skyline_dev
+database = skyline-prod
 port = 27017
 
 [authentication]
 authenticate = true
 
 [reebillreconciliation]
-log_directory = /var/local/reebill-dev
-report_directory = /var/local/reebill-dev
+log_directory = /var/local/reebill-prod/
+report_directory = /var/local/reebill-prod/
 
 [reebillestimatedrevenue]
-log_directory = /var/local/reebill-dev
-report_directory = /var/local/reebill-dev
+log_directory = /var/local/reebill-prod/
+report_directory = /var/local/reebill-prod/
 
 
 
