--- a/conf/settings-stage-template.cfg
+++ b/conf/settings-stage-template.cfg
@@ -1,17 +1,14 @@
-# this is an example of a dev version of the ReeBill config file. copy
-# it to reebill.cfg, which is the file actually read by bill_tool_bridge.
-
 [runtime]
 integrate_skyline_backend = true
 integrate_nexus = true
 mock_skyliner = false
-sessions_key = kljhasdlasldaslkdjasd
+sessions_key = ;lkjhsae;jewqr;lknwe
 
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
-olap_host = localhost
-olap_database = olap_dev
-nexus_web_host = nexus-localdev
+olap_host = 10.0.1.25
+olap_database = olap_stage
+nexus_web_host = nexus.skylineinnovations.net
 nexus_db_host = localhost
 
 [http]
@@ -20,70 +17,67 @@ socket_host = 127.0.0.1
 
 [log]
 log_format = %(asctime)s %(levelname)s %(message)s
-log_file_name = reebill.log
+log_file_name = reebill-stage.log
 
 [usersdb]
 host = localhost
 port = 27017
-database = skyline-dev
-
-[alembic]
-script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
+database = skyline-stage
 
 [statedb]
-uri = mysql://dev:dev@localhost:3306/skyline_dev
+uri = mysql://reebill-stage:KdvDzFZeawPy@localhost:3306/skyline_stage
 echo = false
 
+[alembic]
+script_location = /var/local/reebill-stage/billing/data/model/alembic
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-from = "Skyline Billing (Dev)" <energy_billing@skylineinnovations.com>
+mail_from = "Skyline Innovations Billing (Stage)" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = gkjtiNnpv85HhWjKue8w
-
-[billimages]
-bill_image_directory = /tmp/billimages
-show_reebill_images = true
-
-[reebillrendering]
-temp_directory = /tmp/reebill_rendering_files
-# TODO 37383531 Hardcoded partner name, awaiting partner grouping
-teva_accounts = 
-template_directory = /[home]/[user]/[workspace]/billing/reebill_templates
-default_template = skyline
+password = hMwQ4Dbr
 
 [rsdb]
-database = skyline-dev
+database = skyline-stage
 host = localhost
-rspath = /db-dev/skyline/ratestructure/
 port = 27017
 
 [billdb]
-billpath = /db-dev/skyline/bills/
-database = skyline-dev
-utilitybillpath = /db-dev/skyline/utilitybills/
-utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
+billpath = /db-stage/skyline/bills/
+database = skyline-stage
+utilitybillpath = /db-stage/skyline/utilitybills/
+utility_bill_trash_directory = /db-stage/skyline/utilitybills-deleted
 host = localhost
 port = 27017
+
+[billimages]
+bill_image_directory = /tmp/billimages-stage
+show_reebill_images = true
+
+[reebillrendering]
+temp_directory = /tmp/reebill_rendering_files-stage
+template_directory = /var/local/reebill-stage/billing/reebill_templates
+default_template = skyline
+# TODO 37383531 Hardcoded partner name, awaiting partner grouping
+teva_accounts = 10046 10047 10048
 
 [journaldb]
 host = localhost
-database = skyline-dev
+database = skyline-stage
 port = 27017
 
 [authentication]
-authenticate = false
+authenticate = true
 
 [reebillreconciliation]
-log_directory = /[home]/[user]/workspace/skyline/billing
-report_directory = /[home]/[user]/workspace/skyline/billing
+log_directory = /var/local/reebill-stage
+report_directory = /var/local/reebill-stage
 
 [reebillestimatedrevenue]
-log_directory = /[home]/[user]/workspace/skyline/billing
-report_directory = /[home]/[user]/workspace/skyline/billing
-
+log_directory = /var/local/reebill-stage
+report_directory = /var/local/reebill-stage
 
 
 
