--- a/settings.cfg
+++ b/settings.cfg
@@ -42,7 +42,7 @@ utility_bill_trash_directory = [root]db/skyline/utilitybills-deleted
 
 [statedb]
 #uri = mysql://root:root@localhost:3306/skyline_dev
-uri = sqlite:///brokerage_test.db
+uri = sqlite:///powergas_test.db
 echo = false
 
 [usersdb]
