--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -22,31 +22,31 @@ log_file_name = reebill-dev.log
 [usersdb]
 host = localhost
 port = 27017
-database = reebill_dev
+database = skyline_dev
+
+[alembic]
+script_location = /var/local/reebill-dev/billing/data/model/alembic
 
 [statedb]
-host = localhost
-password = KdvDzFZeawPy
-database = skyline_dev
-user = reebill-dev
+uri = mysql://reebill-dev:reebill-dev@localhost:3306/skyline_dev
+echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-from = "Skyline Innovations Billing (Dev)" <energy_billing@skylineinnovations.com>
+mail_from = "Skyline Innovations Billing (Dev)" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
 password = hMwQ4Dbr
 
 [rsdb]
-database = reebill_dev 
+database = skyline_dev 
 host = localhost
-rspath = /db-dev/skyline/ratestructure/
 port = 27017
 
 [billdb]
 billpath = /db-dev/skyline/bills/
-database = reebill_dev
+database = skyline_dev
 utilitybillpath = /db-dev/skyline/utilitybills/
 utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
 host = localhost
@@ -65,7 +65,7 @@ teva_accounts = 10046 10047 10048
 
 [journaldb]
 host = localhost
-database = skyline-dev
+database = skyline_dev
 port = 27017
 
 [authentication]
@@ -78,3 +78,50 @@ report_directory = /var/local/reebill-dev
 [reebillestimatedrevenue]
 log_directory = /var/local/reebill-dev
 report_directory = /var/local/reebill-dev
+
+
+
+[loggers]
+keys=root,reebill,sqlalchemy
+
+[handlers]
+keys=consoleHandler,fileHandler,reebillHandler
+
+[formatters]
+keys=simpleFormatter
+
+[logger_root]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+
+[logger_sqlalchemy]
+level=ERROR
+handlers=consoleHandler
+qualname=sqlalchemy
+
+[logger_reebill]
+level=DEBUG
+handlers=consoleHandler,fileHandler
+qualname=reebill
+propagate=0
+
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
+formatter=simpleFormatter
+args=(sys.stdout,)
+
+[handler_reebillHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('reebill.log','a',100000000,20)
+
+[handler_fileHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('billing.log','a',100000000,20)
+
+[formatter_simpleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
