--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ Jinja2==2.6
 MySQL-python==1.2.3
 PIL==1.1.7
 PyYAML==3.10
-SQLAlchemy==0.7.8
+SQLAlchemy==0.9.4
+alembic==0.6.5
 argparse==1.2.1
 certifi==0.0.8
 chardet==1.1
 ecdsa==0.10
 fabulous==0.1.5
+formencode==1.3.0a1
 grapefruit==0.1a3
 greenlet==0.4.0
 mongoengine==0.8.4
