deleted billing/alembic.ini; created configs for environments: billing/config/alembic-xx.ini

--- a/conf/alembic-stage.ini
+++ b/conf/alembic-stage.ini
@@ -5,7 +5,6 @@
 
 [alembic]
 # path to migration scripts
-#script_location = billing/data/model/alembic
 script_location = data/model/alembic
 
 # template used to generate migration files
@@ -24,7 +23,7 @@ script_location = data/model/alembic
 # versions/ directory
 # sourceless = false
 
-sqlalchemy.url = mysql://root:root@localhost:3306/skyline_dev
+sqlalchemy.url = mysql://reebill-stage:KdvDzFZeawPy@localhost:3306/skyline_stage
 
 
 # Logging configuration
