.hgignore settings.cfg

--- a/.hgignore
+++ b/.hgignore
@@ -6,5 +6,6 @@ reebill/reconciliation.log
 reebill/reconciliation_report.json
 reebill/ui/revision.txt
 revision.txt
+settings.cfg
 .directory
 .idea
