75043250 attempting to make 'create new version' work. Moved some code from process.get_reebill_metadata_jon to state.reebill.to_dict

--- a/reebill/settings.cfg
+++ b/reebill/settings.cfg
@@ -2,7 +2,7 @@
 integrate_skyline_backend = true
 integrate_nexus = true
 sessions_key = some random bytes to all users to automatically reauthenticate
-mock_skyliner = false
+mock_skyliner = true
 
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
