Tons of metro work on bill templates - nextility L&F

--- a/conf/reebill-localdev-template.cfg
+++ b/conf/reebill-localdev-template.cfg
@@ -42,7 +42,8 @@ smtp_host = smtp.gmail.com
 password = gkjtiNnpv85HhWjKue8w
 
 [billimages]
-bill_image_directory = /tmp/billimages
+# must be match vhost alias directory
+bill_image_directory = /tmp/billimages-localdev
 show_reebill_images = true
 
 [reebillrendering]
