--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -33,11 +33,11 @@ echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-mail_from = "Skyline Innovations Billing (Dev)" <energy_billing@skylineinnovations.com>
-bcc_list = 
+mail_from = "Skyline Billing (Dev)" <energy_billing@skylineinnovations.com>
+bcc_list =
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = hMwQ4Dbr
+password = gkjtiNnpv85HhWjKue8w
 
 [rsdb]
 database = skyline_dev 
