75478950 fixed wrong password in conf/settings-dev-template.cfg

--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -37,7 +37,7 @@ mail_from = "Skyline Billing (Dev)" <energy_billing@skylineinnovations.com>
 bcc_list =
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = gkjtiNnpv85HhWjKue8w
+password = hMwQ4Dbr
 
 [rsdb]
 database = skyline_dev 
