76316038 updated shareddev virtual host conf

--- a/conf/vhosts/reebill-shareddev.conf
+++ b/conf/vhosts/reebill-shareddev.conf
@@ -10,19 +10,11 @@
             Options FollowSymLinks
             AllowOverride None
     </Directory>
-    # directory where utility bill images are saved
-    Alias /utilitybillimages /tmp/billimages-dev
-    <Directory /tmp/billimages>
-        #Order deny,allow
-        #Allow from all
-        Options Indexes FollowSymLinks MultiViews
-        #AllowOverride None
-    </Directory>
 
     Alias /utilitybills /db-dev/skyline/utilitybills
     <Directory /db-dev/skyline/utilitybills>
-        #Order deny,allow
-        #Allow from all
+	    Order deny,allow
+        Allow from all
         Options Indexes FollowSymLinks MultiViews
         #AllowOverride None
     </Directory>
@@ -30,7 +22,8 @@
     # Reebill pdfs
     Alias /reebills /db-dev/skyline/bills/
     <Directory /db-dev/skyline/bills/>
-	Require all granted
+	    Order deny,allow
+        Allow from all
         Options Indexes FollowSymLinks MultiViews
         #AllowOverride None
     </Directory>
