--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -34,6 +34,11 @@ script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
 uri = mysql://dev:dev@localhost:3306/skyline_dev
 echo = false
 
+[aws_s3]
+username=reebill-dev
+access_key_id=AKIAJVT5YEOCCNGKKE3Q
+access_key_secret=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
+
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
