updated qualname of config files; working on billupload.upload method

--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -100,7 +100,7 @@ qualname=sqlalchemy
 [logger_reebill]
 level=DEBUG
 handlers=consoleHandler,fileHandler
-qualname=reebill
+qualname=billing
 propagate=0
 
 [handler_consoleHandler]
