--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -22,6 +22,11 @@ utility_bill_trash_directory = /tmp/test/db-test/skyline/utilitybills-deleted
 host = localhost
 port = 27017
 
+[aws_s3]
+bucket=reebill-dev
+access_key_id=AKIAJVT5YEOCCNGKKE3Q
+access_key_secret=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
+
 
 
 
