updated apache vhost file for localdev so that it doesn't use the envvars file

--- a/conf/vhosts/reebill-localdev.conf
+++ b/conf/vhosts/reebill-localdev.conf
@@ -1,60 +1,89 @@
-PassEnv SKYLINE_DIR
+#To make use of this file, replace everything in []s with whatever applies to your local environment
 
-PassEnv VIRTUAL_ENVS_DIR
 PassEnv APACHE_LOG_DIR
-PassEnv REEBILL_USER
-PassEnv REEBILL_GROUP
-WSGIPythonHome ${VIRTUAL_ENVS_DIR}/wsgi_python_home
+
+Define WSGI_V_ENV_DIR [virtual_envs_dir]/wsgi_python_home
+
+Define REEBILL_ENV localdev
+Define REEBILL_USER [reebill user]
+Define REEBILL_GROUP [reebill group]
+Define UTILBILL_IMAGE_DIR /tmp/billimages
+Define UTILITY_PDF_DIR /db-dev/skyline/utilitybills
+Define REEBILL_PDF_DIR /db-dev/skyline/bills
+Define BILLING_DIR [workspace]/skyline/billing
+Define REEBILL_PYTHON_PATH [virtual_envs_dir]/billing/lib/python2.7/site-packages
+
+WSGIPythonHome ${WSGI_V_ENV_DIR}
 
 <VirtualHost *:80>
+    ServerName reebill-${REEBILL_ENV}
+    
     ServerAdmin webmaster@localhost
-    ServerName reebill-localdev
 
-    DocumentRoot ${SKYLINE_DIR}/billing/reebill/ui/
-    <Directory ${SKYLINE_DIR}/billing/reebill/ui/>
-        DirectoryIndex /reebill
+    DocumentRoot ${BILLING_DIR}/reebill/ui/
+    <Directory ${BILLING_DIR}/reebill/ui/>
+        DirectoryIndex /reebill 
         Options Indexes FollowSymLinks MultiViews
         AllowOverride None
-        Order allow,deny
-        allow from all
+        Require all granted
     </Directory>
 
+    <Directory ${BILLING_DIR}/reebill/ui/images>
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride None
+        Require all granted
+    </Directory>
+    
+    <Directory ${BILLING_DIR}/reebill/>
+        #DirectoryIndex /reebill 
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride None
+        Require all granted
+    </Directory>
+    
     # directory where utility bill images are saved
-    Alias /utilitybillimages /tmp/billimages
-    <Directory /tmp/billimages-dev>
-        #Order deny,allow
-        #Allow from all
+    Alias /utilitybillimages ${UTILBILL_IMAGE_DIR}
+    <Directory ${UTILBILL_IMAGE_DIR}>
         Options Indexes FollowSymLinks MultiViews
-        #AllowOverride None
+        Require all granted
     </Directory>
-    
-    # Utilitybill pdfs
-    Alias /utilitybills /db-dev/skyline/utilitybills/
-    <Directory /db-dev/skyline/utilitybills/>
-	Require all granted
-        Options Indexes FollowSymLinks MultiViews
-        #AllowOverride None
-    </Directory>
-    
-    # Reebill pdfs
-    Alias /reebills /db-dev/skyline/bills/
-    <Directory /db-dev/skyline/bills/>
-	Require all granted
-        Options Indexes FollowSymLinks MultiViews
-        #AllowOverride None
-    </Directory>
-    
-    ErrorLog ${APACHE_LOG_DIR}/reebill-localdev-error.log
 
+    # Utilitybill pdfs
+    Alias /utilitybills ${UTILITY_PDF_DIR}
+    <Directory ${UTILITY_PDF_DIR}>
+        Require all granted
+        Options Indexes FollowSymLinks MultiViews
+        #AllowOverride None
+    </Directory>
+    ErrorLog ${APACHE_LOG_DIR}/reebill-${REEBILL_ENV}_error.log
+
+    # Reebill pdfs
+    Alias /reebills ${REEBILL_PDF_DIR}
+    <Directory ${REEBILL_PDF_DIR}>
+        Require all granted
+        Options Indexes FollowSymLinks MultiViews
+        #AllowOverride None
+    </Directory>
+    
     # Possible values include: debug, info, notice, warn, error, crit,
     # alert, emerg.
     LogLevel debug
 
-    CustomLog ${APACHE_LOG_DIR}/reebill-localdev-access.log combined
+    CustomLog ${APACHE_LOG_DIR}/reebill-${REEBILL_ENV}_access.log combined
 
-    WSGIScriptAlias /reebill ${SKYLINE_DIR}/billing/reebill/wsgi.py
-    WSGIDaemonProcess reebill-localdev user=${REEBILL_USER} group=${REEBILL_GROUP} python-path=${VIRTUAL_ENVS_DIR}/billing/lib/python2.7/site-packages
-    WSGIProcessGroup reebill-localdev
+    WSGIScriptAlias /reebill ${BILLING_DIR}/reebill/wsgi_new.py
+    WSGIDaemonProcess reebill-${REEBILL_ENV} user=${REEBILL_USER} group=${REEBILL_GROUP} python-path=${REEBILL_PYTHON_PATH} home=${BILLING_DIR}
+    WSGIProcessGroup reebill-${REEBILL_ENV}
     WSGIApplicationGroup %{GLOBAL}
 
 </VirtualHost>
+
+UnDefine WSGI_V_ENV_DIR
+UnDefine REEBILL_ENV
+UnDefine REEBILL_USER
+UnDefine REEBILL_GROUP
+UnDefine UTILBILL_IMAGE_DIR
+UnDefine UTILITY_PDF_DIR
+UnDefine REEBILL_PDF_DIR
+UnDefine BILLING_DIR
+UnDefine REEBILL_PYTHON_PATH
