got rid of different databases for each mongo collection

--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -18,11 +18,6 @@ nexus_db_host = localhost
 socket_port = 8185
 socket_host = 127.0.0.1
 
-[usersdb]
-host = localhost
-port = 27017
-database = skyline-prod
-
 [statedb]
 uri = mysql://reebill-prod:NWH7H4wY@localhost:3306/skyline_prod
 echo = false
@@ -35,18 +30,15 @@ smtp_port = 587
 smtp_host = smtp.gmail.com
 password = hMwQ4Dbr
 
-[rsdb]
+[mongodb]
 database = skyline-prod
 host = localhost
 port = 27017
 
-[billdb]
+[bill]
 billpath = /db-prod/skyline/bills/
-database = skyline-prod
 utilitybillpath = /db-prod/skyline/utilitybills/
 utility_bill_trash_directory = /db-prod/skyline/utilitybills-deleted
-host = localhost
-port = 27017
 
 [alembic]
 script_location = /var/local/reebill-prod/billing/data/model/alembic
@@ -56,11 +48,6 @@ template_directory = /var/local/reebill-prod/billing/reebill_templates
 default_template = skyline
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 10046 10047 10048
-
-[journaldb]
-host = localhost
-database = skyline-prod
-port = 27017
 
 [authentication]
 authenticate = true
