--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -14,20 +14,15 @@ show_reebill_images = true
 uri = mysql://root:root@localhost:3306/test
 echo = false
 
-[billdb]
-billpath = /tmp/test/db-test/skyline/bills/
-database = test
-utilitybillpath = /tmp/test/db-test/skyline/utilitybills/
-utility_bill_trash_directory = /tmp/test/db-test/skyline/utilitybills-deleted
+[mongodb]
 host = localhost
 port = 27017
+database = test
 
-
-
-
-
-
-
+[bill]
+billpath = /tmp/test/db-test/skyline/bills/
+utilitybillpath = /tmp/test/db-test/skyline/utilitybills/
+utility_bill_trash_directory = /tmp/test/db-test/skyline/utilitybills-deleted
 
 
 [loggers]
