--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -17,18 +17,12 @@ nexus_db_host = localhost
 socket_port = 8181
 socket_host = 127.0.0.1
 
-[usersdb]
-host = localhost
-port = 27017
-database = skyline-dev
-
 [alembic]
 script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
 
 [statedb]
 uri = mysql://dev:dev@localhost:3306/skyline_dev
 echo = false
-
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
@@ -44,23 +38,15 @@ teva_accounts =
 template_directory = /[home]/[user]/[workspace]/billing/reebill_templates
 default_template = skyline
 
-[rsdb]
+[mongodb]
 database = skyline-dev
 host = localhost
 port = 27017
 
-[billdb]
+[bill]
 billpath = /db-dev/skyline/bills/
-database = skyline-dev
 utilitybillpath = /db-dev/skyline/utilitybills/
 utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
-host = localhost
-port = 27017
-
-[journaldb]
-host = localhost
-database = skyline-dev
-port = 27017
 
 [authentication]
 authenticate = false
