--- a/conf/settings-stage-template.cfg
+++ b/conf/settings-stage-template.cfg
@@ -14,11 +14,6 @@ nexus_db_host = localhost
 socket_port = 8181
 socket_host = 127.0.0.1
 
-[usersdb]
-host = localhost
-port = 27017
-database = skyline-stage
-
 [statedb]
 uri = mysql://reebill-stage:KdvDzFZeawPy@localhost:3306/skyline_stage
 echo = false
@@ -34,29 +29,21 @@ smtp_port = 587
 smtp_host = smtp.gmail.com
 password = hMwQ4Dbr
 
-[rsdb]
+[mongodb]
 database = skyline-stage
 host = localhost
 port = 27017
 
 [billdb]
 billpath = /db-stage/skyline/bills/
-database = skyline-stage
 utilitybillpath = /db-stage/skyline/utilitybills/
 utility_bill_trash_directory = /db-stage/skyline/utilitybills-deleted
-host = localhost
-port = 27017
 
 [reebillrendering]
 template_directory = /var/local/reebill-stage/billing/reebill_templates
 default_template = skyline
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 10046 10047 10048
-
-[journaldb]
-host = localhost
-database = skyline-stage
-port = 27017
 
 [authentication]
 authenticate = true
