--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -14,15 +14,6 @@ nexus_db_host = localhost
 socket_port = 8181
 socket_host = 127.0.0.1
 
-[log]
-log_format = %(asctime)s %(levelname)s %(message)s
-log_file_name = reebill-dev.log
-
-[usersdb]
-host = localhost
-port = 27017
-database = skyline_dev
-
 [alembic]
 script_location = /var/local/reebill-dev/billing/data/model/alembic
 
@@ -38,29 +29,21 @@ smtp_port = 587
 smtp_host = smtp.gmail.com
 password = hMwQ4Dbr
 
-[rsdb]
+[mongodb]
 database = skyline_dev 
 host = localhost
 port = 27017
 
-[billdb]
+[bill]
 billpath = /db-dev/skyline/bills/
-database = skyline_dev
 utilitybillpath = /db-dev/skyline/utilitybills/
 utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
-host = localhost
-port = 27017
 
 [reebillrendering]
 template_directory = /var/local/reebill-dev/billing/reebill_templates
 default_template = skyline
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 10046 10047 10048
-
-[journaldb]
-host = localhost
-database = skyline_dev
-port = 27017
 
 [authentication]
 authenticate = true
