added nexus_offline_cache_file to configuration files

--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -9,6 +9,7 @@ olap_host = 10.0.1.25
 olap_database = olap_stage
 nexus_web_host = nexus-stage.skylineinnovations.net
 nexus_db_host = localhost
+nexus_offline_cache_file =
 
 [http]
 socket_port = 8181
