--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -12,6 +12,7 @@ olap_host = localhost
 olap_database = olap_dev
 nexus_web_host = nexus-localdev
 nexus_db_host = localhost
+nexus_offline_cache_file =
 
 [http]
 socket_port = 8181
