--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -12,7 +12,7 @@ nexus_web_host = nexus.skylineinnovations.net
 # private DNS name of nexus host
 #nexus_web_host = domU-12-31-39-0E-81-12.compute-1.internal
 nexus_db_host = localhost
-
+nexus_offline_cache_file =
 
 [http]
 socket_port = 8185
