--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -12,7 +12,7 @@ olap_host = localhost
 olap_database = olap_dev
 nexus_web_host = nexus-stage.skylineinnovations.net
 nexus_db_host = localhost
-nexus_offline_cache_file = /dev/null
+nexus_offline_cache_file =
 
 [http]
 socket_port = 8181
