now configurable for local fakes3 server. Added configuration parameters for s3 connectivity; added schema migration script.

--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -6,6 +6,14 @@ sessions_key = ;lkjhsae;jewqr;lknwe
 [amqp]
 exchange = reebill
 
+[aws_s3]
+aws_access_key_id=
+aws_secret_access_key=
+host=localhost
+port=4567
+is_secure=false
+calling_format=OrdinaryCallingFormat
+
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
 olap_host = 10.0.1.25
@@ -41,6 +49,7 @@ port = 27017
 billpath = /db-dev/skyline/bills/
 utilitybillpath = /db-dev/skyline/utilitybills/
 utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
+bucket=reebill-dev
 
 [reebillrendering]
 template_directory = /var/local/reebill-dev/billing/reebill_templates
