--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -6,6 +6,14 @@ sessions_key = fjsa83b21gaaks8
 [amqp]
 exchange = reebill
 
+[aws_s3]
+aws_access_key_id=
+aws_secret_access_key=
+host=localhost
+port=4567
+is_secure=false
+calling_format=OrdinaryCallingFormat
+
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
 olap_host = 10.0.1.25
@@ -42,6 +50,7 @@ port = 27017
 billpath = /db-prod/skyline/bills/
 utilitybillpath = /db-prod/skyline/utilitybills/
 utility_bill_trash_directory = /db-prod/skyline/utilitybills-deleted
+bucket=reebill-prod
 
 [alembic]
 script_location = /var/local/reebill-prod/billing/data/model/alembic
