--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -9,6 +9,14 @@ mock_skyliner = true
 [amqp]
 exchange = reebill
 
+[aws_s3]
+aws_access_key_id=
+aws_secret_access_key=
+host=localhost
+port=4567
+is_secure=false
+calling_format=OrdinaryCallingFormat
+
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
 olap_host = localhost
@@ -41,6 +49,7 @@ database = test
 billpath = /tmp/test/db-test/skyline/bills/
 utilitybillpath = /tmp/test/db-test/skyline/utilitybills/
 utility_bill_trash_directory = /tmp/test/db-test/skyline/utilitybills-deleted
+bucket=reebill-dev
 
 [aws_s3]
 bucket=reebill-dev
