--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -9,6 +9,14 @@ sessions_key = kljhasdlasldaslkdjasd
 [amqp]
 exchange = reebill
 
+[aws_s3]
+aws_access_key_id=
+aws_secret_access_key=
+host=localhost
+port=4567
+is_secure=false
+calling_format=OrdinaryCallingFormat
+
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
 olap_host = localhost
@@ -55,6 +63,7 @@ port = 27017
 billpath = /db-dev/skyline/bills/
 utilitybillpath = /db-dev/skyline/utilitybills/
 utility_bill_trash_directory = /db-dev/skyline/utilitybills-deleted
+bucket=reebill-dev
 
 [authentication]
 authenticate = false
