--- a/conf/settings-stage-template.cfg
+++ b/conf/settings-stage-template.cfg
@@ -6,6 +6,14 @@ sessions_key = ;lkjhsae;jewqr;lknwe
 [amqp]
 exchange = reebill
 
+[aws_s3]
+aws_access_key_id=
+aws_secret_access_key=
+host=localhost
+port=4567
+is_secure=false
+calling_format=OrdinaryCallingFormat
+
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
 olap_host = 10.0.1.25
@@ -41,6 +49,7 @@ port = 27017
 billpath = /db-stage/skyline/bills/
 utilitybillpath = /db-stage/skyline/utilitybills/
 utility_bill_trash_directory = /db-stage/skyline/utilitybills-deleted
+bucket=reebill-stage
 
 [reebillrendering]
 template_directory = /var/local/reebill-stage/billing/reebill_templates
