Updated to use DefaultCallingFormat

--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -7,12 +7,13 @@ sessions_key = fjsa83b21gaaks8
 exchange = reebill
 
 [aws_s3]
-aws_access_key_id=
-aws_secret_access_key=
-host=localhost
-port=4567
-is_secure=false
-calling_format=OrdinaryCallingFormat
+aws_access_key_id=???
+aws_secret_access_key=???
+host=s3.amazonaws.com
+port=443
+is_secure=true
+calling_format=DefaultCallingFormat
+
 
 [skyline_backend]
 oltp_url = http://duino-drop.appspot.com/
