--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -23,6 +23,7 @@ olap_host = localhost
 olap_database = olap_dev
 nexus_web_host = nexus-stage.skylineinnovations.net
 nexus_db_host = localhost
+nexus_offline_cache_file =
 
 [http]
 socket_port = 8181
@@ -50,11 +51,6 @@ billpath = /tmp/test/db-test/skyline/bills/
 utilitybillpath = /tmp/test/db-test/skyline/utilitybills/
 utility_bill_trash_directory = /tmp/test/db-test/skyline/utilitybills-deleted
 bucket=reebill-dev
-
-[aws_s3]
-bucket=reebill-dev
-access_key_id=AKIAJVT5YEOCCNGKKE3Q
-access_key_secret=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
 
 [authentication]
 authenticate = false
