78593968 update mailer.mail_from in config files to say Nextility

--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -27,7 +27,7 @@ echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-mail_from = "Skyline Billing (Dev)" <energy_billing@skylineinnovations.com>
+mail_from = "Nextility Billing (Dev)" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
