--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -24,7 +24,7 @@ echo = false
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-mail_from = "Skyline Innovations" <energy_billing@skylineinnovations.com>
+mail_from = "Nextility" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
