--- a/conf/settings-stage-template.cfg
+++ b/conf/settings-stage-template.cfg
@@ -24,7 +24,7 @@ script_location = /var/local/reebill-stage/billing/data/model/alembic
 
 [mailer]
 originator = energy_billing@skylineinnovations.com
-mail_from = "Skyline Innovations Billing (Stage)" <energy_billing@skylineinnovations.com>
+mail_from = "Nextility Billing (Stage)" <energy_billing@skylineinnovations.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
