--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -26,12 +26,12 @@ uri = mysql://dev:dev@localhost:3306/skyline_dev
 echo = false
 
 [mailer]
-originator = energy_billing@skylineinnovations.com
-mail_from = "Nextility Billing (Dev)" <energy_billing@skylineinnovations.com>
+originator = energy_billing@nextility.com
+mail_from = "Nextility Billing (Dev)" <energy_billing@nextility.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = hMwQ4Dbr
+password = PeRz0wOYEGYyYK7eQ4AGsQete
 
 [reebillrendering]
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
