--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -23,12 +23,12 @@ uri = mysql://reebill-prod:NWH7H4wY@localhost:3306/skyline_prod
 echo = false
 
 [mailer]
-originator = energy_billing@skylineinnovations.com
-mail_from = "Nextility" <energy_billing@skylineinnovations.com>
+originator = energy_billing@nextility.com
+mail_from = "Nextility Billing" <energy_billing@nextility.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = hMwQ4Dbr
+password = PeRz0wOYEGYyYK7eQ4AGsQete
 
 [mongodb]
 database = skyline-prod
