79406428 section header alembic prevents the application from loading. Removed per MN.

--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -18,8 +18,9 @@ nexus_offline_cache_file =
 socket_port = 8181
 socket_host = 127.0.0.1
 
-[alembic]
-script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
+# Remove per 79406428
+#[alembic]
+#script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
 
 [statedb]
 uri = mysql://dev:dev@localhost:3306/skyline_dev
