--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -40,8 +40,9 @@ billpath = /db-prod/skyline/bills/
 utilitybillpath = /db-prod/skyline/utilitybills/
 utility_bill_trash_directory = /db-prod/skyline/utilitybills-deleted
 
-[alembic]
-script_location = /var/local/reebill-prod/billing/data/model/alembic
+# remove per 79406428
+#[alembic]
+#script_location = /var/local/reebill-prod/billing/data/model/alembic
 
 [reebillrendering]
 template_directory = /var/local/reebill-prod/billing/reebill_templates
