incoming merge - guessing default was merged onto this one.

--- a/conf/settings-prod-template.cfg
+++ b/conf/settings-prod-template.cfg
@@ -23,12 +23,12 @@ uri = mysql://reebill-prod:NWH7H4wY@localhost:3306/skyline_prod
 echo = false
 
 [mailer]
-originator = energy_billing@skylineinnovations.com
-mail_from = "Nextility" <energy_billing@skylineinnovations.com>
+originator = energy_billing@nextility.com
+mail_from = "Nextility Billing" <energy_billing@nextility.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = hMwQ4Dbr
+password = PeRz0wOYEGYyYK7eQ4AGsQete
 
 [mongodb]
 database = skyline-prod
@@ -40,8 +40,9 @@ billpath = /db-prod/skyline/bills/
 utilitybillpath = /db-prod/skyline/utilitybills/
 utility_bill_trash_directory = /db-prod/skyline/utilitybills-deleted
 
-[alembic]
-script_location = /var/local/reebill-prod/billing/data/model/alembic
+# remove per 79406428
+#[alembic]
+#script_location = /var/local/reebill-prod/billing/data/model/alembic
 
 [reebillrendering]
 template_directory = /var/local/reebill-prod/billing/reebill_templates
