--- a/conf/settings-stage-template.cfg
+++ b/conf/settings-stage-template.cfg
@@ -19,16 +19,17 @@ socket_host = 127.0.0.1
 uri = mysql://reebill-stage:KdvDzFZeawPy@localhost:3306/skyline_stage
 echo = false
 
-[alembic]
-script_location = /var/local/reebill-stage/billing/data/model/alembic
+# remove per 79406428
+#[alembic]
+#script_location = /var/local/reebill-stage/billing/data/model/alembic
 
 [mailer]
-originator = energy_billing@skylineinnovations.com
-mail_from = "Nextility Billing (Stage)" <energy_billing@skylineinnovations.com>
+originator = energy_billing@nextility.com
+mail_from = "Nextility Billing (Stage)" <energy_billing@nextility.com>
 bcc_list = 
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = hMwQ4Dbr
+password = PeRz0wOYEGYyYK7eQ4AGsQete
 
 [mongodb]
 database = skyline-stage
