--- a/conf/settings-dev-template.cfg
+++ b/conf/settings-dev-template.cfg
@@ -15,20 +15,21 @@ nexus_offline_cache_file =
 socket_port = 8181
 socket_host = 127.0.0.1
 
-[alembic]
-script_location = /var/local/reebill-dev/billing/data/model/alembic
+# remove per 79406428
+#[alembic]
+#script_location = /var/local/reebill-dev/billing/data/model/alembic
 
 [statedb]
 uri = mysql://reebill-dev:reebill-dev@localhost:3306/skyline_dev
 echo = false
 
 [mailer]
-originator = energy_billing@skylineinnovations.com
-mail_from = "Nextility Billing (Dev)" <energy_billing@skylineinnovations.com>
+originator = energy_billing@nextility.com
+mail_from = "Nextility Billing (Dev)" <energy_billing@nextility.com>
 bcc_list =
 smtp_port = 587
 smtp_host = smtp.gmail.com
-password = hMwQ4Dbr
+password = PeRz0wOYEGYyYK7eQ4AGsQete
 
 [mongodb]
 database = skyline_dev 
