--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -18,8 +18,9 @@ nexus_offline_cache_file =
 socket_port = 8181
 socket_host = 127.0.0.1
 
-[alembic]
-script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
+# Remove per 79406428
+#[alembic]
+#script_location = /[home]/[user]/workspace/skyline/billing/data/model/alembic
 
 [statedb]
 uri = mysql://dev:dev@localhost:3306/skyline_dev
@@ -34,6 +35,7 @@ smtp_host = smtp.gmail.com
 password = PeRz0wOYEGYyYK7eQ4AGsQete
 
 [reebillrendering]
+#temp_directory = /tmp/reebill_rendering_files
 # TODO 37383531 Hardcoded partner name, awaiting partner grouping
 teva_accounts = 
 template_directory = /[home]/[user]/[workspace]/billing/reebill_templates
@@ -67,7 +69,6 @@ report_directory = /[home]/[user]/workspace/skyline/billing
 
 [loggers]
 keys=root,reebill,sqlalchemy
-
 [handlers]
 keys=consoleHandler,fileHandler,reebillHandler
 
