--- a/conf/settings-localdev-template.cfg
+++ b/conf/settings-localdev-template.cfg
@@ -49,6 +49,7 @@ bcc_list =
 smtp_port = 587
 smtp_host = smtp.gmail.com
 password = PeRz0wOYEGYyYK7eQ4AGsQete
+template_file_name = issue_email_template.html
 
 [reebillrendering]
 #temp_directory = /tmp/reebill_rendering_files
