--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -40,6 +40,7 @@ bcc_list =
 smtp_port = 587
 smtp_host = smtp.gmail.com
 password = x
+template_file_name = issue_email_template.html
 
 [mongodb]
 host = localhost
