--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -36,7 +36,7 @@ echo = false
 [mailer]
 originator = energy_billing@skylineinnovations.com
 mail_from = "Skyline Billing (Dev)" <energy_billing@skylineinnovations.com>
-bcc_list =
+bcc_list = someone@example.com, others@gmail.com
 smtp_port = 587
 smtp_host = smtp.gmail.com
 password = x
