--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,6 @@ pycrypto==2.6.1
 pymongo==2.7.2
 python-dateutil==2.1
 pytz==2013.8
-reportlab==2.5
 requests==0.14.0
 simplejson==2.6.0
 tablib==0.9.11
@@ -30,3 +29,11 @@ wsgiref==0.1.2
 xlwt==0.7.4
 boto==2.32.1
 testfixtures
+
+reportlab==2.5
+# PIL seems to be required for reportlab, but the reportlab package does not
+# specify it as a dependency (instead fails with "AttributeError: 'NoneType'
+# object has no attribute 'Image'"). No "pil" or "PIL" package seems to exist
+# in PyPI anymore either. I think PIL is no longer maintained. However, the
+# following seems to be a distribution of PIL that will make ReportLab work:
+http://effbot.org/media/downloads/Imaging-1.1.7.tar.gz
