80662958 render bills for some accounts using "teva" images instead of "nextility_swh" according to "teva_accounts" in settings.cfg

--- a/test/tstsettings.cfg
+++ b/test/tstsettings.cfg
@@ -53,8 +53,7 @@ log_directory = /tmp
 report_directory = /tmp
 
 [reebillrendering]
-# TODO 37383531 Hardcoded partner name, awaiting partner grouping
-teva_accounts =
+teva_accounts = teva
 template_directory = /tmp
 default_template = skyline
 
